<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:weightSum="2">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/categoryEdit"
            android:text="@string/category"
            android:textColor="@color/primary"
            android:enabled="false"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/assetEdit"
            android:text="@string/asset"
            android:textColor="@color/primaryTextColor"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:weightSum="100">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="center"
                android:text="@string/name"
                android:enabled="false"
                android:textColor="@color/primaryTextColor">
            </EditText>

            <EditText
                android:id="@+id/input1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:imeOptions="actionNext"
                android:gravity="center|start"
                android:textColor="@color/primaryTextColor">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:weightSum="100"
            android:id="@+id/input2Layout">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="center"
                android:enabled="false"
                android:text="@string/categoryType"
                android:textColor="@color/primaryTextColor">
            </EditText>
            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/income"
                    android:id="@+id/incomeRadioBtn"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/expenditure"
                    android:id="@+id/expenditureRadioBtn"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="48">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:weightSum="100"
            android:layout_margin="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="@string/save"
                android:gravity="center"
                android:onClick="save"
                android:layout_margin="1dp"
                android:id="@+id/save"
                android:textColor="@color/white">
            </Button>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/cancel"
                android:gravity="center"
                android:onClick="cancel"
                android:layout_margin="1dp"
                android:textColor="@color/white">
            </Button>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>