<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:weightSum="3">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/IncomeButton"
            android:textColor="@color/blue"
            android:text="@string/income" />
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ExpenditureButton"
            android:textColor="@color/red"
            android:text="@string/expenditure" />
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ConversionButton"
            android:textColor="@color/green"
            android:text="@string/conversion" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55"
        android:orientation="vertical"
        android:weightSum="100">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:text="@string/date"
                android:gravity="center"
                android:id="@+id/dateTv">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:id="@+id/date"
                android:background="@drawable/bottom_border"
                android:gravity="center|start">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:id="@+id/time"
                android:background="@drawable/bottom_border"
                android:gravity="center|start">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:text="@string/asset"
                android:gravity="center"
                android:id="@+id/assetLabel">
            </TextView>

            <TextView
                android:id="@+id/asset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:imeOptions="actionNext"
                android:background="@drawable/bottom_border"
                android:gravity="center|start"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:text="@string/category"
                android:gravity="center"
                android:id="@+id/categoryLabel">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:id="@+id/category"
                android:background="@drawable/bottom_border"
                android:gravity="center|start">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:text="@string/value"
                android:gravity="center">
            </TextView>

            <EditText
                android:id="@+id/value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:imeOptions="actionNext"
                android:background="@drawable/bottom_border"
                android:gravity="center|start"
                android:inputType="number">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:text="@string/memo"
                android:gravity="center">
            </TextView>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:id="@+id/memo"
                android:background="@drawable/bottom_border"
                android:gravity="center|start">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:weightSum="100"
            android:layout_margin="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="@string/save"
                android:gravity="center"
                android:onClick="save"
                android:layout_margin="1dp"
                android:id="@+id/save"
                android:textColor="@color/white">
            </Button>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/cancel"
                android:gravity="center"
                android:onClick="cancel"
                android:layout_margin="1dp"
                android:textColor="@color/white">
            </Button>
        </LinearLayout>

    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="37"
        android:id="@+id/table">

    </TableLayout>


</LinearLayout>